--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,18 @@
 import com.android.builder.core.BuilderConstants;
 
 buildscript {
-  repositories {
-    mavenCentral()
-  }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:1.5.0'
-  }
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.0.0'
+    }
 }
 dependencies {
-  repositories {
-    mavenCentral()
-  }
+    repositories {
+        mavenCentral()
+    }
 }
 
 group = GROUP
@@ -21,61 +22,65 @@ apply plugin: 'com.android.library'
 apply plugin: 'maven'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion '23.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
-  defaultConfig {
-    minSdkVersion 11
-    versionName VERSION_NAME
-  }
+    defaultConfig {
+        minSdkVersion 19
+        versionName VERSION_NAME
+    }
 
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_7
-    targetCompatibility JavaVersion.VERSION_1_7
-  }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
-  compile 'com.android.support:support-annotations:23.1.1'
+    implementation 'com.android.support:support-annotations:27.0.0'
 
-  testCompile 'junit:junit:4.12'
-  testCompile 'org.mockito:mockito-core:1.10.19'
-  testCompile 'org.easytesting:fest-assert-core:2.0M10'
-  testCompile 'org.robolectric:robolectric:3.0'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.10.0'
+    testImplementation 'org.easytesting:fest-assert-core:2.0M10'
+    testImplementation 'org.robolectric:robolectric:3.4.2'
 }
 
 android.libraryVariants.all { variant ->
-  def name = variant.buildType.name
-  if (!BuilderConstants.DEBUG.equals(name)) {
-    def task = project.tasks.create "jar${name.capitalize()}", Jar
-    task.dependsOn variant.javaCompile
-    task.from variant.javaCompile.destinationDir
-    artifacts.add('archives', task);
-  }
+    def name = variant.buildType.name
+    if (!BuilderConstants.DEBUG.equals(name)) {
+        def task = project.tasks.create "jar${name.capitalize()}", Jar
+        task.dependsOn variant.javaCompile
+        task.from variant.javaCompile.destinationDir
+        artifacts.add('archives', task);
+    }
 }
 
 apply plugin: 'checkstyle'
 checkstyle {
-  configFile file('checkstyle.xml')
-  ignoreFailures true
-  showViolations false
-  configProperties = [
-      'checkstyle.suppressions.file': file('checkstyle-suppressions.xml'),
-  ]
+    configFile file('checkstyle.xml')
+    ignoreFailures true
+    showViolations false
+    configProperties = [
+            'checkstyle.suppressions.file': file('checkstyle-suppressions.xml'),
+    ]
 }
 
 // Applying the checkstyle plugin adds multiple tasks but not
 // one for checkstylin' against android sources. This task
 // belows does the trick.
 task checkstyle(type: Checkstyle) {
-  configFile file('checkstyle.xml')
-  source 'src/main/java'
-  ignoreFailures false
-  showViolations true
-  include '**/*.java'
-  exclude '**/gen/**'
+    configFile file('checkstyle.xml')
+    source 'src/main/java'
+    ignoreFailures false
+    showViolations true
+    include '**/*.java'
+    exclude '**/gen/**'
 
-  classpath = files()
+    classpath = files()
 }
 
 apply from: 'gradle-mvn-push.gradle'
+
+repositories {
+    google()
+}
